# assignment2

./: CMakeLists.txt  HowManyWaysToMake.h  MaximumGates.h  Stack.h  TestHowManyWaysToMake  TestHowManyWaysToMake.cpp  TestMaximumGates  TestMaximumGates.cpp  TestStack  TestStack.cpp  YourTestForHowManyWaysToMake.h
TestStack.dSYM/Contents/Resources/DWARF/: TestStack
